--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                     <form action="" class="form-control">
                         <input class="message" type="text" placeholder="Message">
-                        <button>add</button>
+                        <button>Send</button>
                     </form>
                 </div>
 
