--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                             <h2 class="heading">Create a New User</h2>
                             <form action="" class="creating__wrapper">
                                 <input type="text" required class="first__name" placeholder="First Name">
-                                <input type="text" required class="email" placeholder="Your email">
+                                <input type="email" required class="email" placeholder="Your email">
                                 <input type="text" required class="job" placeholder="Your Job">
                                 <button class="btn">Create</button>
                             </form>
